<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_x="0dp"
    android:layout_y="-1dp"
    android:orientation="vertical"
    android:background="#3498db" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical|top"
        android:text="@string/installation_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/installation_text"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/root_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
        	android:paddingRight="2dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp"
            android:layout_weight="1.50"
            android:text="@string/installation_root_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/root_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
        	android:paddingRight="2dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp"
            android:layout_weight="0.44"
            android:text="@string/installation_root_button"
            android:onClick="checkIfRooted"
            android:background="#e67e22"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <Button
        android:id="@+id/busybox_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/installation_busybox_button"
        android:onClick="installBusybox"
        android:background="#e74c3c"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="0dip"
        android:layout_weight="0.54"
        android:text="@string/installation_status_text"
        android:textColor="#FFFFFF"  />

    <Button
        android:id="@+id/endInstallation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/installation_confirmation_button"
        android:onClick="endInstallation"
        android:background="#e74c3c"
        android:textColor="#FFFFFF" />

</LinearLayout>