<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="48dp"
            android:layout_weight="0.85"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/destination_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/destinations_page_destination_name"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/destination_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/destinations_page_destination_address"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <Button
            android:id="@+id/destinations_page_probe_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="#2c3e50"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/destinations_page_probe_button"
            android:textColor="#FFFFFF" />

</LinearLayout>