<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3498db"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/destinations_page_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/destinations_page_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <!-- ADD NEW DEST -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/destinations_page_add_edittext"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/destinations_page_add_placeholder"
            android:lines="1"
            android:nextFocusLeft="@id/destinations_page_add_edittext"
            android:nextFocusUp="@id/destinations_page_add_edittext"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:textColor="#000000" />

        <Button
            android:id="@+id/status_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.45"
            android:background="#2c3e50"
            android:onClick="add_custom_destination"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/destinations_page_add_button"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ListView
        android:id="@+id/destinations_table"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_weight="0.90" >
    </ListView>

    <!-- LIST BOTTOM -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/number_of_destinations_label"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/destinations_number"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/about_destinations_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="#2c3e50"
            android:onClick="show_info_about_destinations"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/destinations_page_about_destinations_button"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>