<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3498db" >

    <TextView
        android:id="@+id/settings_page_label"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/results_page_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <!-- MODE CHOOSER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/view_middleboxes_mode_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
        	android:paddingLeft="2dp"
        	android:paddingRight="2dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp"
        	android:textColor="#FFFFFF"
        	android:background="#2c3e50"
            android:layout_weight="1"
            android:text="@string/results_middleboxes_button"
            android:onClick="view_middleboxes_mode" />

        <Button
            android:id="@+id/view_logs_mode_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
        	android:paddingLeft="2dp"
        	android:paddingRight="2dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp"
        	android:textColor="#FFFFFF"
        	android:background="#2980b9"
            android:layout_weight="1"
            android:text="@string/results_logs_button"
            android:onClick="view_logs_mode" />

    </LinearLayout>

    <ScrollView
    	android:layout_width="fill_parent"
    	android:layout_height="276dp"
    	android:layout_weight="1">
    	<TableLayout
	        android:id="@+id/results_table"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:background="#3498db" >
    	</TableLayout>
    </ScrollView>
    
</LinearLayout>
